--- a/JabaraAPP/app/src/main/res/layout/item_chat_left_layout.xml
+++ b/JabaraAPP/app/src/main/res/layout/item_chat_left_layout.xml
@@ -79,7 +79,7 @@
                         android:id="@+id/msg_user_content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="8dp"
+                        android:layout_marginBottom="5dp"
                         android:maxWidth="260dp"
                         android:paddingLeft="12dp"
                         android:paddingTop="8dp"
@@ -87,6 +87,60 @@
                         android:text="Message"
                         android:textColor="#000000"
                         android:textSize="14sp" />
+
+                    <LinearLayout
+                        android:id="@+id/promise"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:gravity="center"
+                        android:orientation="vertical"
+                        android:paddingLeft="12dp"
+                        android:paddingTop="8dp"
+                        android:paddingRight="12dp"
+                        android:visibility="gone">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="약속"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/promise_date"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="날짜 : 2022-05-30"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/promise_time"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="시간 : 2022-05-30"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="장소"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/promise_location"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textStyle="bold" />
+
+
+                        <TextView
+                            android:id="@+id/promise_btn"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="지도로보기"
+                            android:textColor="@android:color/holo_blue_light"
+                            android:textStyle="bold" />
+                    </LinearLayout>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/balance_btn"
@@ -166,6 +220,14 @@
                         app:srcCompat="@drawable/call_plus" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/emoticon"
+                android:layout_width="180dp"
+                android:layout_height="180dp"
+                android:scaleType="fitXY"
+                android:src="@drawable/background"
+                android:visibility="gone" />
 
             <TextView
                 android:id="@+id/msg_user_time"
