--- a/JabaraAPP/app/src/main/res/layout/item_chat_left_no_layout.xml
+++ b/JabaraAPP/app/src/main/res/layout/item_chat_left_no_layout.xml
@@ -47,7 +47,7 @@
                     android:id="@+id/msg_no_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginBottom="5dp"
                     android:maxWidth="260dp"
                     android:paddingLeft="12dp"
                     android:paddingTop="8dp"
@@ -56,8 +56,60 @@
                     android:textColor="#000000"
                     android:textSize="16sp" />
 
+                <LinearLayout
+                    android:id="@+id/promise"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:paddingLeft="12dp"
+                    android:paddingTop="8dp"
+                    android:paddingRight="12dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="약속"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/promise_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="날짜 : 2022-05-30"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/promise_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="시간 : 2022-05-30"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="장소"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/promise_location"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textStyle="bold" />
+
+
+                    <TextView
+                        android:id="@+id/promise_btn"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="지도로보기"
+                        android:textColor="@android:color/holo_blue_light"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
                 <androidx.appcompat.widget.AppCompatButton
-                    android:visibility="gone"
                     android:id="@+id/balance_btn"
                     android:layout_width="70dp"
                     android:layout_height="30dp"
@@ -66,7 +118,8 @@
                     android:text="받기"
                     android:textColor="@color/white"
                     android:textSize="12sp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:visibility="gone" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
@@ -133,6 +186,14 @@
                     app:srcCompat="@drawable/call_plus" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
+        <ImageView
+            android:id="@+id/emoticon"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/background"
+            android:visibility="gone" />
 
         <TextView
             android:id="@+id/msg_no_time"
